terminada creacion de corridas con agenda de la misma mediante AlarmManager que inicia Servicio

--- a/DigiTriadLab/app/src/main/AndroidManifest.xml
+++ b/DigiTriadLab/app/src/main/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rfdetke.digitriadlaboratory">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
@@ -18,7 +18,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.ExperimentDetailActivity"></activity>
+
+        <service
+            android:name=".ExperimentService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <receiver
+            android:name=".AlarmReceiver"
+            android:process=":remote" />
+
+        <activity android:name=".views.DeviceInfoActivity" />
+        <activity android:name=".views.NewRunActivity" />
+        <activity android:name=".views.ExperimentDetailActivity" />
         <activity android:name=".views.NewExperimentActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
