--- a/DigiTriadLab/app/build.gradle
+++ b/DigiTriadLab/app/build.gradle
@@ -40,11 +40,13 @@ android {
 dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation 'androidx.wear:wear:1.0.0'
     //noinspection LifecycleAnnotationProcessorWithJava8
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.2.0"
 
     // UI
     implementation "com.google.android.material:material:1.1.0"
+    compileOnly 'com.google.android.wearable:wearable:2.5.0'
     def room_version = "2.2.5"
 
     implementation "androidx.room:room-runtime:$room_version"
