--- a/DigiTriadLab/app/build.gradle
+++ b/DigiTriadLab/app/build.gradle
@@ -46,7 +46,8 @@ dependencies {
 
     // QR
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.4'
-    implementation 'com.google.zxing:core:3.3.2'
+    implementation 'com.google.zxing:core:3.3.3'
+    implementation 'com.budiyev.android:code-scanner:2.1.0'
     
     // UI
     implementation "com.google.android.material:material:1.1.0"
