--- a/DigiTriadLab/app/src/main/AndroidManifest.xml
+++ b/DigiTriadLab/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:allowBackup="true"
@@ -18,6 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
 
         <service
             android:name=".ExperimentService"
@@ -31,6 +33,7 @@
         <activity android:name=".views.DeviceInfoActivity" />
         <activity android:name=".views.NewRunActivity" />
         <activity android:name=".views.ExperimentDetailActivity" />
+        <activity android:name=".ScanQrExperiment" />
         <activity android:name=".views.NewExperimentActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
