--- a/DigiTriadLab/app/build.gradle
+++ b/DigiTriadLab/app/build.gradle
@@ -50,7 +50,10 @@ dependencies {
     implementation 'com.budiyev.android:code-scanner:2.1.0'
     
     // UI
-    implementation "com.google.android.material:material:1.1.0"
+    implementation "com.google.android.material:material:1.2.0"
+
+    //GSON
+    implementation 'com.google.code.gson:gson:2.8.5'
 
     // database
     def room_version = "2.2.5"
