--- a/DigiTriadLab/app/src/main/AndroidManifest.xml
+++ b/DigiTriadLab/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.rfdetke.digitriadlaboratory">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
