--- a/DigiTriadLab/app/src/main/AndroidManifest.xml
+++ b/DigiTriadLab/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".gapis.drive.folderselector.FolderPickerActivity"></activity>
+        <activity android:name=".gapis.drive.folderselector.FolderPickerActivity" />
 
         <service
             android:name=".ExperimentService"
