--- a/DigiTriadLab/app/src/main/AndroidManifest.xml
+++ b/DigiTriadLab/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.CAMERA" />
 
+    <!-- Required to access activity recognition. -->
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
+    <!-- Required for 29+. -->
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
 
     <application
         android:allowBackup="true"
